added two servlets

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -11,4 +11,20 @@
         <servlet-name>ProductController</servlet-name>
         <url-pattern>/ProductController</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>CartController</servlet-name>
+        <servlet-class>edu.wctc.jrauch2.distributedjava.controller.CartController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CartController</servlet-name>
+        <url-pattern>/CartController</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>AccountController</servlet-name>
+        <servlet-class>edu.wctc.jrauch2.distributedjava.controller.AccountController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AccountController</servlet-name>
+        <url-pattern>/AccountController</url-pattern>
+    </servlet-mapping>
 </web-app>
