add REST services

--- a/djClassProjectSpringBoot/src/main/resources/application.properties
+++ b/djClassProjectSpringBoot/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.servlet.context-path=/djClassProjectSpringBoot
 server.tomcat.additional-tld-skip-patterns=derbyLocale_*.jar
+spring.jackson.serialization.fail-on-empty-beans=false
 
